Bug fixes, added team logos to superbowl page

--- a/css/article.css
+++ b/css/article.css
@@ -425,40 +425,6 @@ body {
   background-size: cover;
   margin-right: 0; }
 
-#footer {
-  position: absolute;
-  width: 100%;
-  height: 50px;
-  background: black;
-  bottom: 0;
-  z-index: 10000;
-  float: bottom; }
-  #footer .footer-logo-container {
-    display: none;
-    width: 175px;
-    height: 24px;
-    overflow: hidden;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15px;
-    position: relative; }
-    #footer .footer-logo-container .footer-logo {
-      -webkit-transition: top 0.15s ease;
-      -moz-transition: top 0.15s ease;
-      -ms-transition: top 0.15s ease;
-      -o-transition: top 0.15s ease;
-      transition: top 0.15s ease;
-      width: 125px;
-      height: 48px;
-      background: url("../img/logo.png");
-      background-size: cover;
-      background-repeat: no-repeat;
-      position: absolute;
-      top: 0; }
-      #footer .footer-logo-container .footer-logo:hover {
-        cursor: pointer;
-        top: -24px; }
-
 ::selection {
   background: #fa4b2a;
   color: white; }
@@ -529,7 +495,7 @@ body {
     z-index: 10; }
     #article .article-header.stuck {
       position: fixed;
-      top: 70;
+      top: 140px;
       border-bottom: 1px solid #dbdbdb;
       height: 65px; }
       #article .article-header.stuck:hover {
@@ -626,7 +592,8 @@ body {
     max-width: 1024px;
     width: 90%;
     margin-left: auto;
-    margin-right: auto; }
+    margin-right: auto;
+    min-width: 680px; }
   #article h1 {
     font-family: BariolThin;
     font-size: 14pt;
@@ -753,12 +720,52 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: 80%; }
+  #article .article-finale {
+    position: relative;
+    height: 250px; }
+  #article .final-logo {
+    -webkit-transition: all 0.25s ease;
+    -moz-transition: all 0.25s ease;
+    -ms-transition: all 0.25s ease;
+    -o-transition: all 0.25s ease;
+    transition: all 0.25s ease;
+    display: inline-block;
+    position: absolute;
+    width: 150px;
+    height: 100px;
+    background: #9fddf0;
+    margin-top: 50px; }
+  #article #ravens {
+    margin-left: 20px;
+    background: url("../img/superbowl/ravens.png") center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 130px; }
+    @media only screen and (min-width: 1030px) {
+      #article #ravens {
+        width: 280px;
+        height: 200px;
+        margin-top: 20px; } }
+  #article #fortyniners {
+    background: url("../img/superbowl/49ers.png") center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    right: 0;
+    margin-right: 20px; }
+    @media only screen and (min-width: 1030px) {
+      #article #fortyniners {
+        width: 305px;
+        height: 200px;
+        margin-top: 20px; } }
   #article .final-score {
-    width: 40%;
-    padding-left: 5%;
+    position: absolute;
+    width: 409px;
     height: 250px;
-    margin-left: auto;
+    margin-left: 200px;
     margin-right: auto; }
+    @media only screen and (min-width: 1030px) {
+      #article .final-score {
+        margin-left: 300px; } }
     #article .final-score .final-number-container {
       font-family: BariolThin;
       font-weight: normal;
