Bug Fixes, cleaned up code

--- a/css/scores.css
+++ b/css/scores.css
@@ -434,8 +434,8 @@ body {
   color: white; }
 
 .scores-content {
-  margin-top: 80px;
-  width: 90%;
+  margin-top: 160px;
+  width: 1024px;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 50px; }
@@ -502,6 +502,9 @@ body {
       background-size: cover; }
     .scores-content .scorebox #photo-8 {
       background: url("../img/scores/8.jpg") center;
+      background-size: cover; }
+    .scores-content .scorebox #photo-9 {
+      background: url("../img/scores/9.jpg") center;
       background-size: cover; }
     .scores-content .scorebox .score-text {
       -webkit-transition: bottom 0.5s ease;
