--- a/css/article.css
+++ b/css/article.css
@@ -129,6 +129,7 @@ body {
       list-style-type: none; }
   #menu-bar #menu-scores {
     display: inline-block;
+    vertical-align: top;
     margin-left: 35px;
     width: 65px;
     color: #9b9b9b;
@@ -190,9 +191,8 @@ body {
       transition: top 0.25s ease;
       margin-left: auto;
       margin-right: auto;
-      top: 0;
-      position: absolute;
-      right: 40; }
+      right: 40;
+      position: absolute; }
     #menu-bar #menu-scores #score {
       -webkit-transition: color 0.25s ease;
       -moz-transition: color 0.25s ease;
