--- a/css/global.scss
+++ b/css/global.scss
@@ -280,6 +280,7 @@ body {
 
     #menu-scores {
         display: inline-block;
+        vertical-align: top;
         margin-left: 35px;
         width: 65px;
         color: $lightgray;
@@ -340,9 +341,8 @@ body {
             @include transition(top .25s ease);
             margin-left: auto;
             margin-right: auto;
-            top: 0;
-            position: absolute;
             right: 40;
+            position: absolute;
         }
 
         #score {
